mcast.conf: Todos os parametros necessarios foram incluidos

--- a/mcast.conf
+++ b/mcast.conf
@@ -1,7 +1,11 @@
-verbose = 10
-any = "0.0.0.0"
+verbose=10
+# opcoes para o servidor
+any=0.0.0.0
 sender_port = 1501
-mcast_addr = "224.0.0.1"
-mcast_port = 1600
+mcast_addr=224.0.0.2
+mcast_port=1600
+# opcoes para o client
+udp_port=50000
+
 # somente rede interna, nao passa por roteador
-ttl = 1
+ttl=2
